--- a/src/components/AddTodo.module.css
+++ b/src/components/AddTodo.module.css
@@ -1,3 +1,17 @@
-.form {
-    text-align: center;
+.addTodoForm {
+    display: flex;
+    width: 80%;
+    margin: 16px auto;
+    justify-content: center;
+}
+
+.addTodoInput {
+    width: 100%;
+    padding: 5px;
+    border-radius: 7px;
+}
+
+.addTodoButton {
+    border-radius: 5px;
+    padding: 5px;
 }
