--- a/src/components/AddTodo.module.css
+++ b/src/components/AddTodo.module.css
@@ -2,16 +2,28 @@
     display: flex;
     width: 80%;
     margin: 16px auto;
+    margin-top: 24px;
     justify-content: center;
 }
 
 .addTodoInput {
     width: 100%;
-    padding: 5px;
-    border-radius: 7px;
+    padding: 8px;
+    border-radius: 8px;
 }
 
 .addTodoButton {
-    border-radius: 5px;
-    padding: 5px;
+    color: gray;
+    font-weight: bold;
+    width: 5%;
+    border-radius: 8px;
+    padding: 8px;
+    background: lightgreen;
+    cursor: pointer;
+}
+
+.addTodoButton:hover, 
+.addTodoButton:active {
+    color: lightgreen;
+    background: gray;
 }
