--- a/src/components/Todos.module.css
+++ b/src/components/Todos.module.css
@@ -1,3 +1,24 @@
-.main_div {
+.filterSection {
+    display: flex;
+    margin: 8px;
+    width: 80%;
+    margin: 16px auto;
+}
+
+.filterInput {
+    margin: 0 32px;
+    width: 40%;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.filterButton {
+    margin: 0 8px;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.todosDiv {
     text-align: center;
+    margin-top: 16px;
 }
