--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -1,17 +1,28 @@
 .main_header {
-    background: lightgreen;
+    background: #90ee90;
     display: flex;
+    padding: 8px;
 }
 
-.nav_links {
+.mainNav {
     width: 80%;
     margin: 4px auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
+.mainHeaderLinks {
+    display: flex;
+    width: 18%;
+    justify-content: space-around;
+}
 .nav_link {
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
     text-decoration: none;
+}
+
+.nav_link:hover,
+.nav_link:active {
+    color: white;
 }
